## Process this file with automake to produce Makefile.in
 
 
EXTRA_DIST = CaptionLabels.java Demo4.gif HomeOwn4.0.0.gif HomeOwn4.0.1.gif  \
	HomeOwn4.0.2.gif HomeOwn4.0.3.gif HomeOwn4.0.4.gif HomeOwn4.0.5.gif  \
	HomeOwn4.0.6.gif HomeOwn4.0.7.gif HomeOwn4.0.8.gif MRI_22.0.0.gif  \
	MRI_22.0.1.gif MRI_22.0.2.gif MRI_22.0.3.gif MRI_22.0.4.gif \
	MRI_22.0.5.gif MRI_22.0.6.gif MRI_22.0.7.gif MRI_22.0.8.gif \
	ScatterData4.0.0.gif ScatterData4.0.1.gif ScatterData4.0.2.gif \
	ScatterData4.0.3.gif ScatterData4.0.4.gif ScatterData4.0.5.gif \
	ScatterData4.0.6.gif ScatterData4.0.7.gif ScatterData4.0.8.gif \
	Status.htm Status.html Status.java Streamline3.0.0.gif \
	Streamline3.0.1.gif Streamline3.0.2.gif Streamline3.0.3.gif \
	Streamline3.0.4.gif Streamline3.0.5.gif Streamline3.0.6.gif \
	Streamline3.0.7.gif Streamline3.0.8.gif Topo3.0.0.gif Topo3.0.1.gif \
	Topo3.0.2.gif Topo3.0.3.gif Topo3.0.4.gif Topo3.0.5.gif Topo3.0.6.gif \
	Topo3.0.7.gif Topo3.0.8.gif activex.htm earlier.htm imageWindow.java \
	pagea.gif pagea2.gif pagea3.gif perp1.0.0.gif perp1.0.1.gif \
	perp1.0.2.gif perp1.0.3.gif perp1.0.4.gif perp1.0.5.gif perp1.0.6.gif \
	perp1.0.7.gif perp1.0.8.gif toc.htm
